--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,36 @@ responsive to mobile view on various screen width as below */
   width: 100% !important;
 }
 
+/* react phone input */
 .react-tel-input .form-control {
   width: 100% !important;
+  padding-top: 30px !important;
+  padding-bottom: 25px !important;
+}
+
+.react-tel-input .country-list .country {
+  text-align: left !important;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 25px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 .button_login_decoration {
@@ -84,7 +112,7 @@ responsive to mobile view on various screen width as below */
   overflow: scroll;
 }
 
-.top_heading{
+.top_heading {
   font-size: 35px;
   font-weight: 600;
 }
