--- a/src/Component/AdminPages/Adminpages.css
+++ b/src/Component/AdminPages/Adminpages.css
@@ -7,3 +7,24 @@
   margin-left: 2%;
   margin-right: 2%;
 }
+.cardheight_overflow {
+  height: 500px;
+  overflow-y: scroll;
+}
+.button_formatting{
+  background-color: #ff0000 !important;
+  text-transform: capitalize !important;
+  color: white !important;
+  text-decoration: none !important;
+  outline: none !important;
+}
+.Manage_video_headding{
+  font-size: 20px;
+  font-weight: 700;
+}
+.radio_font {
+  color: #9a9a9a;
+  font-weight: 500;
+  padding-left: 20px;
+  font-size: 14px;
+}
